positioned navbar elements

--- a/index.html
+++ b/index.html
@@ -14,10 +14,17 @@
 
 </head>
 <body>
-  About
-  Services
-  Projects
-  Contact
+
+  <section id="navigation">
+    <span id="logo_text">SunnySide</span>
+    <nav>
+      <p>About</p>
+      <p>Services</p>
+      <p>Projects</p>
+      <p>Contact</p>
+    </nav>
+  </section>
+
 
   We are creatives
 
