--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
 
 </head>
 <body>
+  <header>
+    <section id="navigation">
+      <span id="logo_text">SunnySide</span>
+      <nav>
+        <p>About</p>
+        <p>Services</p>
+        <p>Projects</p>
+        <p>Contact</p>
+      </nav>
+    </section>
+  </header>
 
-  <section id="navigation">
-    <span id="logo_text">SunnySide</span>
-    <nav>
-      <p>About</p>
-      <p>Services</p>
-      <p>Projects</p>
-      <p>Contact</p>
-    </nav>
-  </section>
 
 
   We are creatives
