added border to contact word

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <body>
   <header>
     <section id="navigation">
-      <span id="logo_text">SunnySide</span>
+      <img src='./images/logo.svg' id="logo"/>
       <nav>
         <p>About</p>
         <p>Services</p>
         <p>Projects</p>
-        <p>Contact</p>
+        <p id="contact">CONTACT</p>
       </nav>
     </section>
   </header>
