added and styled agency text and added down arrow

--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
         <p id="contact">CONTACT</p>
       </nav>
     </section>
+
+    <div id="intro">
+      <p id="intro-text">WE ARE CREATIVES</p>
+      <img id="intro-arrow" src="images/icon-arrow-down.svg"/>
+    </div>
   </header>
 
 
 
-  We are creatives
+  
 
   Transform your brand
 
