--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     </div>
   </header>
 
+  <section id="transform">
+    <div id="transform-div">Transform your brand</div>
+    <img id="transform-image" src="images/desktop/image-transform.jpg"/>
+  </section>
+
 
 
   
