added general layout for stand out for right audience section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
     <img id="transform-image" src="images/desktop/image-transform.jpg"/>
   </section>
 
+  <section id="standout">
+    <img id="standout-image" src="images/desktop/image-stand-out.jpg"/>
+    <div id="standout-div">Stand out to the right audience</div>
+  </section>
+
 
 
   
