added general layout for services section

--- a/index.html
+++ b/index.html
@@ -31,15 +31,21 @@
     </div>
   </header>
 
-  <section id="transform">
+  <section id="transform" class="section">
     <div id="transform-div">Transform your brand</div>
-    <img id="transform-image" src="images/desktop/image-transform.jpg"/>
+    <img id="transform-image" class="images"  src="images/desktop/image-transform.jpg"/>
   </section>
 
-  <section id="standout">
-    <img id="standout-image" src="images/desktop/image-stand-out.jpg"/>
+  <section id="standout" class="section">
+    <img id="standout-image" class="images" src="images/desktop/image-stand-out.jpg"/>
     <div id="standout-div">Stand out to the right audience</div>
   </section>
+
+  <section class="section">
+    <img class="images" src="images/desktop/image-graphic-design.jpg"/>
+    <img class="images" src="images/desktop/image-photography.jpg"/>
+  </section>
+
 
 
 
