added id to services section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div id="standout-div">Stand out to the right audience</div>
   </section>
 
-  <section class="section">
+  <section id="services" class="section">
     <img class="images" src="images/desktop/image-graphic-design.jpg"/>
     <img class="images" src="images/desktop/image-photography.jpg"/>
   </section>
