added gallery section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
     <img class="images" src="images/desktop/image-photography.jpg"/>
   </section>
 
+  <section id="testimonials">
+  </section>
+
+  <section class="section" id="gallery-images">
+    <img class="gallery-image" src="images/desktop/image-gallery-milkbottles.jpg"/>
+    <img class="gallery-image" src="images/desktop/image-gallery-orange.jpg"/>
+    <img class="gallery-image" src="images/desktop/image-gallery-cone.jpg"/>
+    <img class="gallery-image" src="images/desktop/image-gallery-sugarcubes.jpg"/>
+  </section>
+
 
 
 
