add general layout for footer section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
     <img class="gallery-image" src="images/desktop/image-gallery-sugarcubes.jpg"/>
   </section>
 
+  <footer class="section" id="footer">
+
+  </footer>
+
 
 
 
