added layout of links, logo, and navigation in footer

--- a/index.html
+++ b/index.html
@@ -57,7 +57,20 @@
   </section>
 
   <footer class="section" id="footer">
+    <img src="images/logo.svg"/> 
 
+    <div id="footer-nav">
+      <p>About</p>
+      <p>Services</p>
+      <p>Products</p>
+    </div>
+
+    <div id="footer-links">
+      <img src="images/icon-facebook.svg"/>
+      <img src="images/icon-instagram.svg"/>
+      <img src="images/icon-twitter.svg"/>
+      <img src="images/icon-pinterest.svg"/>
+    </div>
   </footer>
 
 
