added filter to color svg logo in footer

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
   </section>
 
   <footer class="section" id="footer">
-    <img src="images/logo.svg"/> 
+    <img id="footer-logo" src="images/logo.svg"/>
 
     <div id="footer-nav">
-      <p>About</p>
-      <p>Services</p>
-      <p>Products</p>
+      <p class="footer-nav-links">About</p>
+      <p class="footer-nav-links">Services</p>
+      <p class="footer-nav-links">Products</p>
     </div>
 
     <div id="footer-links">
